sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:10: error: not found: value tab
		for(i<-0 to tab.length-2) {
                            ^